[project]
name = "subjective_trading_find_signal_telegram_channels_on_the_web_datasource"
description = "Crawls the web via DuckDuckGo to find Telegram channels providing free crypto/forex trading signals."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "subjective-abstract-data-source-package @ git+https://github.com/Subjective-Technologies/subjective-abstract-data-source-package.git",
    "brainboost-data-source-logger-package @ git+https://github.com/Subjective-Technologies/brainboost_data_source_logger_package.git",
    "brainboost-configuration-package @ git+https://github.com/Subjective-Technologies/brainboost_configuration_package.git",
    "duckduckgo-search>=7.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
